# gen-dl-in-pytorch

./: .gitignore  README.md  pyproject.toml
src/gen_dl_pytorch/: cifar10.py  train.py
